--- a/babylon-backend/pyproject.toml
+++ b/babylon-backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiosqlite>=0.21.0",
+    "colorama>=0.4.6",
     "fastapi>=0.116.1",
     "ollama>=0.5.3",
     "pydantic-settings>=2.10.1",
